# dm-board

./: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32H723XG_FLASH.ld  dm-board.ioc
App/: CMakeLists.txt  app_def.c  app_def.h
BSP/: CMakeLists.txt
BSP/include/bsp/: err.h  imu.h  key.h  led.h  rng.h  sys.h  tim.h  time.h  uart.h  vofa.h
BSP/src/: err.c  imu.c  key.c  led.c  sys.c  tim.c  uart.c
BSP/src/bmi088/: bmi088.c  bmi088.h  bmi088_reg.h
Components/: CMakeLists.txt  README.md
Components/ahrs/: CMakeLists.txt
Components/ahrs/include/: ahrs.h
Components/ahrs/src/: ahrs.c
Components/math/: CMakeLists.txt
Components/math/include/alg/: quat.h  vec.h
Components/math/include/filter/: comp_filter.h  lowpass_filter.h
Components/math/src/: comp_filter.c  lowpass_filter.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
